--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -342,18 +342,17 @@
             <div list-prompt="tasks" list-prompt-infos="listInfos"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
 
-            <a href ng-if="showAgenda && eventInstancesLoaded" class="link"
+            <a href ng-if="showAgenda && eventInstancesLoaded" style="display: block; padding-top: 12px;" class="link"
               ng-click="openCalendar(daySlides[2].info)">
-              <h3 ng-if="agendaEvents && agendaEvents.length" class="row-form">agenda</h3>
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[2].info) as agendaEvents track by agendaEvent.event_id">
                 <div style="margin-bottom: -11px;" class="group-mixed with-checkbox">
-                  <div class="group-mixed--left">
-                    <span style="white-space:pre-wrap; line-height: normal; padding-left: 28px;" class="text-field--label"
+                  <div class="group-mixed--left" style="min-width: 72px; width: 72px;">
+                    <span style="white-space:pre-wrap; line-height: normal; padding-left: 28px;" ng-class="!agendaEvent.allDay && 'asd'" class="text-field--label"
                       ng-bind="agendaEvent.allDay ? 'all day' : agendaEvent.begin + '\n' + agendaEvent.end">
                     </span>
                   </div>
                   <div style="vertical-align: top;" class="group-mixed--middle">
-                    <span ng-bind="agendaEvent.title" class="text-heading-primary" clamp=2></span>
+                    <span ng-bind="agendaEvent.title" style="line-height: 18px; font-size: 15px;" clamp=2></span>
                   </div>
                   <div ng-if="agendaEvent.rrule" class="group-mixed--right">
                     <span class="icon-sort small"></span>
@@ -387,18 +386,17 @@
             <div list-prompt="tasks" list-prompt-infos="listInfos"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
 
-            <a href ng-if="showAgenda && eventInstancesLoaded" class="link"
+            <a href ng-if="showAgenda && eventInstancesLoaded" style="display: block; padding-top: 12px;" class="link"
               ng-click="openCalendar(daySlides[0].info)">
-              <h3 ng-if="agendaEvents && agendaEvents.length" class="row-form">agenda</h3>
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[0].info) as agendaEvents track by agendaEvent.event_id">
                 <div style="margin-bottom: -11px;" class="group-mixed with-checkbox">
-                  <div class="group-mixed--left">
-                    <span style="white-space:pre-wrap; line-height: normal; padding-left: 28px;" class="text-field--label"
+                  <div class="group-mixed--left" style="min-width: 72px; width: 72px;">
+                    <span style="white-space:pre-wrap; line-height: normal; padding-left: 28px;" ng-class="!agendaEvent.allDay && 'asd'" class="text-field--label"
                       ng-bind="agendaEvent.allDay ? 'all day' : agendaEvent.begin + '\n' + agendaEvent.end">
                     </span>
                   </div>
                   <div style="vertical-align: top;" class="group-mixed--middle">
-                    <span ng-bind="agendaEvent.title" class="text-heading-primary" clamp=2></span>
+                    <span ng-bind="agendaEvent.title" style="line-height: 18px; font-size: 15px;" clamp=2></span>
                   </div>
                   <div ng-if="agendaEvent.rrule" class="group-mixed--right">
                     <span class="icon-sort small"></span>
@@ -432,18 +430,17 @@
             <div list-prompt="tasks" list-prompt-infos="listInfos"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
 
-            <a href ng-if="showAgenda && eventInstancesLoaded" class="link"
+            <a href ng-if="showAgenda && eventInstancesLoaded" style="display: block; padding-top: 12px;" class="link"
               ng-click="openCalendar(daySlides[1].info)">
-              <h3 ng-if="agendaEvents && agendaEvents.length" class="row-form">agenda</h3>
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[1].info) as agendaEvents track by agendaEvent.event_id">
                 <div style="margin-bottom: -11px;" class="group-mixed with-checkbox">
-                  <div class="group-mixed--left">
-                    <span style="white-space:pre-wrap; line-height: normal; padding-left: 28px;" class="text-field--label"
+                  <div class="group-mixed--left" style="min-width: 72px; width: 72px;">
+                    <span style="white-space:pre-wrap; line-height: normal; padding-left: 28px;" ng-class="!agendaEvent.allDay && 'asd'" class="text-field--label"
                       ng-bind="agendaEvent.allDay ? 'all day' : agendaEvent.begin + '\n' + agendaEvent.end">
                     </span>
                   </div>
                   <div style="vertical-align: top;" class="group-mixed--middle">
-                    <span ng-bind="agendaEvent.title" class="text-heading-primary" clamp=2></span>
+                    <span ng-bind="agendaEvent.title" style="line-height: 18px; font-size: 15px;" clamp=2></span>
                   </div>
                   <div ng-if="agendaEvent.rrule" class="group-mixed--right">
                     <span class="icon-sort small"></span>
@@ -477,18 +474,17 @@
             <div list-prompt="tasks" list-prompt-infos="listInfos"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
 
-            <a href ng-if="showAgenda && eventInstancesLoaded" class="link"
+            <a href ng-if="showAgenda && eventInstancesLoaded" style="display: block; padding-top: 12px;" class="link"
               ng-click="openCalendar(daySlides[2].info)">
-              <h3 ng-if="agendaEvents && agendaEvents.length" class="row-form">agenda</h3>
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[2].info) as agendaEvents track by agendaEvent.event_id">
                 <div style="margin-bottom: -11px;" class="group-mixed with-checkbox">
-                  <div class="group-mixed--left">
-                    <span style="white-space:pre-wrap; line-height: normal; padding-left: 28px;" class="text-field--label"
+                  <div class="group-mixed--left" style="min-width: 72px; width: 72px;">
+                    <span style="white-space:pre-wrap; line-height: normal; padding-left: 28px;" ng-class="!agendaEvent.allDay && 'asd'" class="text-field--label"
                       ng-bind="agendaEvent.allDay ? 'all day' : agendaEvent.begin + '\n' + agendaEvent.end">
                     </span>
                   </div>
                   <div style="vertical-align: top;" class="group-mixed--middle">
-                    <span ng-bind="agendaEvent.title" class="text-heading-primary" clamp=2></span>
+                    <span ng-bind="agendaEvent.title" style="line-height: 18px; font-size: 15px;" clamp=2></span>
                   </div>
                   <div ng-if="agendaEvent.rrule" class="group-mixed--right">
                     <span class="icon-sort small"></span>
@@ -522,18 +518,17 @@
             <div list-prompt="tasks" list-prompt-infos="listInfos"
               list-prompt-hide="[listItemAddActive, onboardingInProgress, daySlidesInfosCleared]"></div>
 
-            <a href ng-if="showAgenda && eventInstancesLoaded" class="link"
+            <a href ng-if="showAgenda && eventInstancesLoaded" style="display: block; padding-top: 12px;" class="link"
               ng-click="openCalendar(daySlides[0].info)">
-              <h3 ng-if="agendaEvents && agendaEvents.length" class="row-form">agenda</h3>
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[0].info) as agendaEvents track by agendaEvent.event_id">
                 <div style="margin-bottom: -11px;" class="group-mixed with-checkbox">
-                  <div class="group-mixed--left">
-                    <span style="white-space:pre-wrap; line-height: normal; padding-left: 28px;" class="text-field--label"
+                  <div class="group-mixed--left" style="min-width: 72px; width: 72px;">
+                    <span style="white-space:pre-wrap; line-height: normal; padding-left: 28px;" ng-class="!agendaEvent.allDay && 'asd'" class="text-field--label"
                       ng-bind="agendaEvent.allDay ? 'all day' : agendaEvent.begin + '\n' + agendaEvent.end">
                     </span>
                   </div>
                   <div style="vertical-align: top;" class="group-mixed--middle">
-                    <span ng-bind="agendaEvent.title" class="text-heading-primary" clamp=2></span>
+                    <span ng-bind="agendaEvent.title" style="line-height: 18px; font-size: 15px;" clamp=2></span>
                   </div>
                   <div ng-if="agendaEvent.rrule" class="group-mixed--right">
                     <span class="icon-sort small"></span>
