--- a/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
+++ b/frontend/core/src/main/webapp/static/app/focus/focusTasks.html
@@ -346,20 +346,18 @@
               ng-click="openCalendar(daySlides[2].info)">
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[2].info) as agendaEvents track by agendaEvent.event_id">
                 <div style="margin-bottom: -11px;" class="group-mixed with-checkbox">
-                  <div class="group-mixed--left" style="min-width: 72px; width: 72px;">
-                    <span style="white-space:pre-wrap; line-height: normal; padding-left: 28px;" ng-class="!agendaEvent.allDay && 'asd'" class="text-field--label"
+                  <div class="group-mixed--left" style="min-width: 77px; width: 77px;">
+                    <span style="font-size: 15px; line-height: 18px; padding-top: 11px; padding-bottom: 11px; padding-left: 28px;" ng-class="!agendaEvent.allDay && 'asd'" class="text-field--label"
                       ng-bind="agendaEvent.allDay ? 'all day' : agendaEvent.begin + '\n' + agendaEvent.end">
                     </span>
                   </div>
                   <div style="vertical-align: top;" class="group-mixed--middle">
                     <span ng-bind="agendaEvent.title" style="line-height: 18px; font-size: 15px;" clamp=2></span>
+                    <span class="text-details" ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')" clamp=1></span>
                   </div>
                   <div ng-if="agendaEvent.rrule" class="group-mixed--right">
                     <span class="icon-sort small"></span>
                   </div>
-                </div>
-                <div style="height: 22px;" class="row">
-                  <span class="text-details" ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')" clamp=1></span>
                 </div>
               </div>
               <span ng-if="!agendaEvents || !agendaEvents.length" class="row text-details">no events</span>
@@ -390,20 +388,18 @@
               ng-click="openCalendar(daySlides[0].info)">
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[0].info) as agendaEvents track by agendaEvent.event_id">
                 <div style="margin-bottom: -11px;" class="group-mixed with-checkbox">
-                  <div class="group-mixed--left" style="min-width: 72px; width: 72px;">
-                    <span style="white-space:pre-wrap; line-height: normal; padding-left: 28px;" ng-class="!agendaEvent.allDay && 'asd'" class="text-field--label"
+                  <div class="group-mixed--left" style="min-width: 77px; width: 77px;">
+                    <span style="font-size: 15px; line-height: 18px; padding-top: 11px; padding-bottom: 11px; padding-left: 28px;" ng-class="!agendaEvent.allDay && 'asd'" class="text-field--label"
                       ng-bind="agendaEvent.allDay ? 'all day' : agendaEvent.begin + '\n' + agendaEvent.end">
                     </span>
                   </div>
                   <div style="vertical-align: top;" class="group-mixed--middle">
                     <span ng-bind="agendaEvent.title" style="line-height: 18px; font-size: 15px;" clamp=2></span>
+                    <span class="text-details" ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')" clamp=1></span>
                   </div>
                   <div ng-if="agendaEvent.rrule" class="group-mixed--right">
                     <span class="icon-sort small"></span>
                   </div>
-                </div>
-                <div style="height: 22px;" class="row">
-                  <span class="text-details" ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')" clamp=1></span>
                 </div>
               </div>
               <span ng-if="!agendaEvents || !agendaEvents.length" class="row text-details">no events</span>
@@ -434,20 +430,18 @@
               ng-click="openCalendar(daySlides[1].info)">
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[1].info) as agendaEvents track by agendaEvent.event_id">
                 <div style="margin-bottom: -11px;" class="group-mixed with-checkbox">
-                  <div class="group-mixed--left" style="min-width: 72px; width: 72px;">
-                    <span style="white-space:pre-wrap; line-height: normal; padding-left: 28px;" ng-class="!agendaEvent.allDay && 'asd'" class="text-field--label"
+                  <div class="group-mixed--left" style="min-width: 77px; width: 77px;">
+                    <span style="font-size: 15px; line-height: 18px; padding-top: 11px; padding-bottom: 11px; padding-left: 28px;" ng-class="!agendaEvent.allDay && 'asd'" class="text-field--label"
                       ng-bind="agendaEvent.allDay ? 'all day' : agendaEvent.begin + '\n' + agendaEvent.end">
                     </span>
                   </div>
                   <div style="vertical-align: top;" class="group-mixed--middle">
                     <span ng-bind="agendaEvent.title" style="line-height: 18px; font-size: 15px;" clamp=2></span>
+                    <span class="text-details" ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')" clamp=1></span>
                   </div>
                   <div ng-if="agendaEvent.rrule" class="group-mixed--right">
                     <span class="icon-sort small"></span>
                   </div>
-                </div>
-                <div style="height: 22px;" class="row">
-                  <span class="text-details" ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')" clamp=1></span>
                 </div>
               </div>
               <span ng-if="!agendaEvents || !agendaEvents.length" class="row text-details">no events</span>
@@ -478,20 +472,18 @@
               ng-click="openCalendar(daySlides[2].info)">
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[2].info) as agendaEvents track by agendaEvent.event_id">
                 <div style="margin-bottom: -11px;" class="group-mixed with-checkbox">
-                  <div class="group-mixed--left" style="min-width: 72px; width: 72px;">
-                    <span style="white-space:pre-wrap; line-height: normal; padding-left: 28px;" ng-class="!agendaEvent.allDay && 'asd'" class="text-field--label"
+                  <div class="group-mixed--left" style="min-width: 77px; width: 77px;">
+                    <span style="font-size: 15px; line-height: 18px; padding-top: 11px; padding-bottom: 11px; padding-left: 28px;" ng-class="!agendaEvent.allDay && 'asd'" class="text-field--label"
                       ng-bind="agendaEvent.allDay ? 'all day' : agendaEvent.begin + '\n' + agendaEvent.end">
                     </span>
                   </div>
                   <div style="vertical-align: top;" class="group-mixed--middle">
                     <span ng-bind="agendaEvent.title" style="line-height: 18px; font-size: 15px;" clamp=2></span>
+                    <span class="text-details" ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')" clamp=1></span>
                   </div>
                   <div ng-if="agendaEvent.rrule" class="group-mixed--right">
                     <span class="icon-sort small"></span>
                   </div>
-                </div>
-                <div style="height: 22px;" class="row">
-                  <span class="text-details" ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')" clamp=1></span>
                 </div>
               </div>
               <span ng-if="!agendaEvents || !agendaEvents.length" class="row text-details">no events</span>
@@ -522,20 +514,18 @@
               ng-click="openCalendar(daySlides[0].info)">
               <div ng-repeat="agendaEvent in getEventInstances(daySlides[0].info) as agendaEvents track by agendaEvent.event_id">
                 <div style="margin-bottom: -11px;" class="group-mixed with-checkbox">
-                  <div class="group-mixed--left" style="min-width: 72px; width: 72px;">
-                    <span style="white-space:pre-wrap; line-height: normal; padding-left: 28px;" ng-class="!agendaEvent.allDay && 'asd'" class="text-field--label"
+                  <div class="group-mixed--left" style="min-width: 77px; width: 77px;">
+                    <span style="font-size: 15px; line-height: 18px; padding-top: 11px; padding-bottom: 11px; padding-left: 28px;" ng-class="!agendaEvent.allDay && 'asd'" class="text-field--label"
                       ng-bind="agendaEvent.allDay ? 'all day' : agendaEvent.begin + '\n' + agendaEvent.end">
                     </span>
                   </div>
                   <div style="vertical-align: top;" class="group-mixed--middle">
                     <span ng-bind="agendaEvent.title" style="line-height: 18px; font-size: 15px;" clamp=2></span>
+                    <span class="text-details" ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')" clamp=1></span>
                   </div>
                   <div ng-if="agendaEvent.rrule" class="group-mixed--right">
                     <span class="icon-sort small"></span>
                   </div>
-                </div>
-                <div style="height: 22px;" class="row">
-                  <span class="text-details" ng-bind="agendaEvent.calendarName + (agendaEvent.eventLocation ? ': ' + agendaEvent.eventLocation : '')" clamp=1></span>
                 </div>
               </div>
               <span ng-if="!agendaEvents || !agendaEvents.length" class="row text-details">no events</span>
